Fix remotes::install_github("Bioconductor/BiocManager", ref="ghost-binary-repo")

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -146,7 +146,8 @@ jobs:
       - name: Install BiocManager
         run: |
           message(paste('****', Sys.time(), 'installing BiocManager ****'))
-          remotes::install_cran("BiocManager")
+          # remotes::install_cran("BiocManager")
+          remotes::install_github("Bioconductor/BiocManager", ref="ghost-binary-repo")
         shell: Rscript {0}
 
       - name: Set BiocVersion
