--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -306,7 +306,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: dozmorovlab/ctcf
+          repository: mdozmorov/CTCF
           tag_with_ref: true
           tag_with_sha: true
           tags: latest
