--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -307,7 +307,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: mdozmorov/CTCF
+          repository: dozmorovlab/CTCF
           tag_with_ref: true
           tag_with_sha: true
           tags: latest
