--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -45,7 +45,9 @@ jobs:
   build-check:
     runs-on: ${{ matrix.config.os }}
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
-    container: ${{ matrix.config.cont }}
+    # container: ${{ matrix.config.cont }}
+    container:
+      image: bioconductor/bioconductor_full:devel
     ## Environment variables unique to this job.
 
     strategy:
