--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -45,9 +45,9 @@ jobs:
   build-check:
     runs-on: ${{ matrix.config.os }}
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
-    # container: ${{ matrix.config.cont }}
-    container:
-      image: bioconductor/bioconductor_full:devel
+    container: ${{ matrix.config.cont }}
+    # container:
+    #   image: bioconductor/bioconductor_full:devel
     ## Environment variables unique to this job.
 
     strategy:
@@ -55,8 +55,8 @@ jobs:
       matrix:
         config:
           - { os: ubuntu-latest, r: '4.2', bioc: '3.16', cont: "bioconductor/bioconductor_docker:devel", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
-          - { os: macOS-latest, r: '4.2', bioc: '3.16'}
-          - { os: windows-latest, r: '4.2', bioc: '3.16'}
+          - { os: macOS-latest, r: '4.2', bioc: '3.16', cont: "bioconductor/bioconductor_docker:devel" }
+          - { os: windows-latest, r: '4.2', bioc: '3.16', cont: "bioconductor/bioconductor_docker:devel" }
           ## Check https://github.com/r-lib/actions/tree/master/examples
           ## for examples using the http-user-agent
     env:
